--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "author": "heiyehk",
   "description": "I便笺拥有漂亮的过度效果，允许开启多个窗口方便在桌面端更方便的记录文字",
-  "main": "background.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/heiyehk/electron-vue3-inote"
@@ -15,83 +15,56 @@
     "email": "heiyehk@foxmail.com"
   },
   "scripts": {
-    "serve": "vue-cli-service electron:serve",
-    "build": "node script/deleteBuild && vue-cli-service electron:build",
-    "publish": "yarn build -p always",
-    "lint": "vue-cli-service lint",
+    "dev": "bunx --bun vite",
+    "build": "vue-tsc && bunx --bun vite build",
+    "preview": "bunx --bun vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "log": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "commit": "yarn log && git add . && cz",
-    "cz": "cz"
+    "commit": "bun run log && git add . && cz"
   },
   "dependencies": {
-    "conventional-changelog-cli": "^2.2.2",
-    "core-js": "^3.15.2",
-    "crypto-js": "^4.1.1",
-    "dayjs": "^1.10.6",
-    "electron-log": "^4.4.7",
-    "electron-updater": "^5.0.1",
-    "fs-extra": "^10.0.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-dialog": "^2.3.0",
+    "@tauri-apps/plugin-fs": "^2.4.0",
+    "@tauri-apps/plugin-sql": "^2.3.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
+    "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7",
-    "style-resources-loader": "^1.4.1",
-    "vditor": "^3.9.0",
-    "vue": "3.2.26",
-    "vue-cli-plugin-electron-builder": "^2.1.1",
-    "vue-router": "^4.0.12"
+    "vditor": "^3.10.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.0.2",
-    "@types/sequelize": "^4.28.10",
-    "@types/sqlite3": "^3.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "cz-conventional-changelog": "3.3.0",
-    "electron": "11.5.0",
-    "electron-builder": "22.14.5",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^7.1.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.2",
-    "typescript": "4.4.4",
-    "vue-cli-plugin-style-resources-loader": "~0.1.4"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "@tauri-apps/cli": "^2.6.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/bun": "^1.2.11",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/tsconfig": "^0.7.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.20.1",
+    "less": "^4.2.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.7.3",
+    "vite": "^7.0.0",
+    "vue-tsc": "^3.0.1"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
-  },
-  "publish": [
-    "github"
-  ],
-  "engines": {
-    "node": "<=16"
-  }
+  "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
