feat: add global Less variables and Tauri adapter for Electron API
- Created a new Less variables file to define global styles including theme colors, text colors, and size variables.
- Implemented an Electron adapter using Tauri, providing compatibility with Electron API, including file system operations, IPC, and window management.
- Added a batch script to start the Tauri development server with optimized settings.

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "email": "heiyehk@foxmail.com"
   },
   "scripts": {
-    "dev": "bunx --bun vite",
-    "build": "vue-tsc && bunx --bun vite build",
+    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_CSS_TIMEOUT=120000 bunx --bun vite",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vue-tsc && bunx --bun vite build",
     "preview": "bunx --bun vite preview",
     "tauri": "tauri",
-    "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
+    "tauri:dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 VITE_CSS_TIMEOUT=120000 tauri dev",
+    "tauri:build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tauri build",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "log": "conventional-changelog -p angular -i CHANGELOG.md -s",
@@ -30,26 +30,33 @@
     "@tauri-apps/api": "^2.6.0",
     "@tauri-apps/plugin-dialog": "^2.3.0",
     "@tauri-apps/plugin-fs": "^2.4.0",
+    "@tauri-apps/plugin-os": "^2.3.0",
+    "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-shell": "^2.3.0",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
+    "@types/path-browserify": "^1.0.3",
     "conventional-changelog-cli": "^4.1.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
-    "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7",
+    "path-browserify": "^1.0.1",
     "vditor": "^3.10.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.6.0",
-    "@types/crypto-js": "^4.2.2",
     "@types/bun": "^1.2.11",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^24.0.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -57,6 +64,7 @@
     "eslint-plugin-vue": "^9.20.1",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
+    "process": "^0.11.10",
     "typescript": "^5.7.3",
     "vite": "^7.0.0",
     "vue-tsc": "^3.0.1"
