--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2.3.0",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "@tauri-apps/plugin-store": "^2.3.0",
     "@tauri-apps/plugin-updater": "^2.9.0",
     "@types/path-browserify": "^1.0.3",
     "conventional-changelog-cli": "^4.1.0",
